*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.20 ===
* Additional methods for converting between UTF-8, UTF-16 and UTF-32.
* Added support of real-time nesting of ipc::IExecutor.
* Added support of custom functions in the expression language.
* Updated build scripts.

=== 1.0.19 ===
* Optimized expression variables access.
* Many code updates that could cause potential problems related to using another
  decimal point for floating-point number formatting.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.18 ===
* Updated module versions in dependencies.

=== 1.0.17 ===
* Fixed several issues reported by PVS Studio static analyzer.
* Fixed invalid memory read on OSC protocol pattern matching.
* The i18n JsonDictionary is forced to be UTF-8. 
* Updated module versions in dependencies.

=== 1.0.16 ===
* Fixed potential problem with invalid delete in io::PathPattern.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.15 ===
* Extended expression language with basic mathematic functions.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.14 ===
* Fixed improper expression parsing under certain conditions.
* Removed Makefile.d. Dependencies are now automatically generated at the build stage.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.13 ===
* Updated module versions in dependencies.

=== 1.0.12 ===
* Updated the implementation of io::StdioFile::size() method for Windows.
* Fixed ipc::Library::get_module_file function for Windows.
* Added test build for Windows using MSYS2.
* Added lsp::to_lower and lsp::to_upper character conversion routines
  (system locale independent support of Latin and Cyrillic characters).
* Implemented io::InSharedMemoryStream class for shared access to the data.