@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2024 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2024 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-runtime-lib
  * Created on: 17 окт. 2019 г.
@@ -175,14 +175,56 @@ namespace lsp
                  * @param value value to write
                  * @return status of operation
                  */
-                status_t    write_int(ssize_t value);
+                status_t    write_int(int32_t value);
+
+                /**
+                 * Write integer value
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    write_int(uint32_t value);
+
+                /**
+                 * Write integer value
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    write_int(int64_t value);
+
+                /**
+                 * Write integer value
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    write_int(uint64_t value);
 
                 /**
                  * Write hexadecimal value
                  * @param value value to write
                  * @return status of operation
                  */
-                status_t    write_hex(ssize_t value);
+                status_t    write_hex(int32_t value);
+
+                /**
+                 * Write hexadecimal value
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    write_hex(uint32_t value);
+
+                /**
+                 * Write hexadecimal value
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    write_hex(int64_t value);
+
+                /**
+                 * Write hexadecimal value
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    write_hex(uint64_t value);
 
                 /**
                  * Write double
@@ -277,6 +319,232 @@ namespace lsp
                  * @return status of operation
                  */
                 status_t    write_property(const LSPString *name);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key UTF-8 property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_int(const char *key, int32_t value);
+
+
+                /**
+                 * Write integer property
+                 * @param key property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_int(const LSPString *key, int32_t value);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key UTF-8 property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_int(const char *key, uint32_t value);
+
+
+                /**
+                 * Write integer property
+                 * @param key property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_int(const LSPString *key, uint32_t value);
+
+                /**
+                 * Write integer property
+                 * @param key UTF-8 property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_int(const char *key, int64_t value);
+
+                /**
+                 * Write integer property
+                 * @param key property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_int(const LSPString *key, int64_t value);
+
+                /**
+                 * Write integer property
+                 * @param key UTF-8 property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_int(const char *key, uint64_t value);
+
+                /**
+                 * Write integer property
+                 * @param key property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_int(const LSPString *key, uint64_t value);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key UTF-8 property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_hex(const char *key, int32_t value);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_hex(const LSPString *key, int32_t value);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key UTF-8 property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_hex(const char *key, uint32_t value);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_hex(const LSPString *key, uint32_t value);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key UTF-8 property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_hex(const char *key, int64_t value);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_hex(const LSPString *key, int64_t value);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key UTF-8 property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_hex(const char *key, uint64_t value);
+
+                /**
+                 * Write hexadecimal property
+                 * @param key property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_hex(const LSPString *key, uint64_t value);
+
+                /**
+                 * Write double property
+                 * @param key UTF-8 property name
+                 * @param value double value
+                 * @return status of operation
+                 */
+                status_t    prop_double(const char *key, double value);
+
+                /**
+                 * Write double property
+                 * @param key property name
+                 * @param value double value
+                 * @return status of operation
+                 */
+                status_t    prop_double(const LSPString *key, double value);
+
+                /**
+                 * Write double property
+                 * @param key UTF-8 property name
+                 * @param value double value
+                 * @param fmt format specifier (same as for sprintf)
+                 * @return status of operation
+                 */
+                status_t    prop_double(const char *key, double value, const char *fmt);
+
+                /**
+                 * Write double property
+                 * @param key property name
+                 * @param value double value
+                 * @param fmt format specifier (same as for sprintf)
+                 * @return status of operation
+                 */
+                status_t    prop_double(const LSPString *key, double value, const char *fmt);
+
+                /**
+                 * Write boolean property
+                 * @param key UTF-8 property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_bool(const char *key, bool value);
+
+                /**
+                 * Write boolean property
+                 * @param key property name
+                 * @param value value to write
+                 * @return status of operation
+                 */
+                status_t    prop_bool(const LSPString *key, bool value);
+
+                /**
+                 * Write string in UTF-8
+                 * @param key UTF-8 property name
+                 * @param value value to write, NULL will be interpreted as NULL value
+                 * @return status of operation
+                 */
+                status_t    prop_string(const char *key, const char *value);
+
+                /**
+                 * Write string value
+                 * @param key UTF-8 property name
+                 * @param value value to write, NULL will be interpreted as NULL value
+                 * @return status of operation
+                 */
+                status_t    prop_string(const char *key, const LSPString *value);
+
+                /**
+                 * Write string in UTF-8
+                 * @param key UTF-8 property name
+                 * @param value value to write, NULL will be interpreted as NULL value
+                 * @return status of operation
+                 */
+                status_t    prop_string(const LSPString *key, const char *value);
+
+                /**
+                 * Write string value
+                 * @param key UTF-8 property name
+                 * @param value value to write, NULL will be interpreted as NULL value
+                 * @return status of operation
+                 */
+                status_t    prop_string(const LSPString *key, const LSPString *value);
+
+                /**
+                 * Write null property
+                 * @param key UTF-8 property name
+                 * @return status of operation
+                 */
+                status_t    prop_null(const char *key);
+
+                /**
+                 * Write null property
+                 * @param key property name
+                 * @return status of operation
+                 */
+                status_t    prop_null(const LSPString *key);
 
                 /**
                  * Write beginning of the object
