@@ -6,6 +6,7 @@
 * Additional methods for converting between UTF-8, UTF-16 and UTF-32.
 * Added support of real-time nesting of ipc::IExecutor.
 * Added support of custom functions in the expression language.
+* Enhanced JSON serializer interface with new functions.
 * Updated build scripts.
 
 === 1.0.19 ===
